tabla comparativa casi casi

--- a/web/elektron/assets/css/styles.css
+++ b/web/elektron/assets/css/styles.css
@@ -157,6 +157,14 @@
   box-shadow: none !important;
 }
 
+.footer-bar {
+  width: 100%;
+  max-height: 100px;
+  height: 105px;
+  text-align: center;
+  padding-top: 20px;
+}
+
 
 /* Safari */
 @-webkit-keyframes spin {
