--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -218,5 +218,12 @@
               </div>
           </panel>
         </div>
+
+        <div class="history-footer-container">
+          <span>Ingrese el período deseado para observar el consumo </span>
+          <span class="glyphicon glyphicon-circle-arrow-up"></span>
+        </div>
+
+
     </div>
 </div>
