--- a/web/elektron/views/components.html
+++ b/web/elektron/views/components.html
@@ -31,49 +31,46 @@
   					</tr>
   					<tr ng-repeat="component in components_server">
   					  <td>
-  						<!-- editable username (text with validation) -->
-  						<span editable-text="component.label" e-name="name" e-form="rowform" e-required>
-  						  {{ component.label }}
-  						</span>
+	  						<span editable-text="component.label" e-name="name" e-form="rowform" e-required>
+	  						  {{ component.label }}
+	  						</span>
+								<span ng-show="component.pluged == true" class="success float-right glyphicon glyphicon-link"></span>
+								<span ng-show="component.pluged == false" class="float-right glyphicon glyphicon-link"></span>
   					  </td>
   					  <td>
-  						<!-- editable status (select-local) -->
-  						<span e-name="ip" e-form="rowform" e-required>
-  						  {{ component.device_ip }}
-  						</span>
+	  						<span e-name="ip" e-form="rowform" e-required>
+	  						  {{ component.device_ip }}
+	  						</span>
   					  </td>
               <td>
-  						<!-- editable status (select-local) -->
-  						<span e-form="rowform" e-required>
-  						  {{ component.device_mac }}
-  						</span>
+	  						<span e-form="rowform" e-required>
+	  						  {{ component.device_mac }}
+	  						</span>
   					  </td>
   					  <td>
-  						<!-- editable group (select-remote) -->
-  						<span e-name="last" e-form="rowform" e-required>
-                <div style="margin-left:3px;" ng-switch on="component.devicestate.name">
-                    <button ng-disabled="offbutton" ng-switch-when="on" class="btn btn-sm btn-danger" ng-click="turnOffComponent($index,component.id)">Apagar</button>
-                    <button ng-disabled="onbutton" ng-switch-when="off" class="btn btn-sm btn-success" ng-click="turnOnComponent($index,component.id)">Prender</button>
-                </div>
-  						</span>
+	  						<span e-name="last" e-form="rowform" e-required>
+	                <div style="margin-left:3px;" ng-switch on="component.devicestate.name">
+	                    <button ng-disabled="offbutton" ng-switch-when="on" class="btn btn-sm btn-danger" ng-click="turnOffComponent($index,component.id)">Apagar</button>
+	                    <button ng-disabled="onbutton" ng-switch-when="off" class="btn btn-sm btn-success" ng-click="turnOnComponent($index,component.id)">Prender</button>
+	                </div>
+	  						</span>
   					  </td>
   					  <td style="white-space: nowrap">
-  						<!-- form -->
-  						<form editable-form name="rowform" onbeforesave="saveComponent($data, component.id)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == component">
-  						  <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-sm btn-primary">
-  							Guardar
-  						  </button>
-  						  <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-sm btn-default">
-  							Cancelar
-  						  </button>
-  						</form>
-  						<div class="buttons" style="display:flex;" ng-show="!rowform.$visible">
-  						  <button class="btn btn-sm btn-primary" ng-click="rowform.$show()">Editar</button>
-                <div style="margin-left:3px;" ng-switch on="component.enabled">
-                    <button ng-disabled="desactivatebutton" ng-switch-when="true" class="btn btn-sm btn-danger" ng-click="disableComponent($index,component.id)">Desactivar</button>
-                    <button ng-disabled="activatebutton" ng-switch-when="false" class="btn btn-sm btn-success" ng-click="enableComponent($index,component.id)">Activar</button>
-                </div>
-  						</div>
+	  						<form editable-form name="rowform" onbeforesave="saveComponent($data, component.id)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == component">
+	  						  <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-sm btn-primary">
+	  								Guardar
+	  						  </button>
+	  						  <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-sm btn-default">
+	  								Cancelar
+	  						  </button>
+	  						</form>
+	  						<div class="buttons" style="display:flex;" ng-show="!rowform.$visible">
+	  						  <button class="btn btn-sm btn-primary" ng-click="rowform.$show()">Editar</button>
+	                <div style="margin-left:3px;" ng-switch on="component.enabled">
+	                    <button ng-disabled="desactivatebutton" ng-switch-when="true" class="btn btn-sm btn-danger" ng-click="disableComponent($index,component.id)">Desactivar</button>
+	                    <button ng-disabled="activatebutton" ng-switch-when="false" class="btn btn-sm btn-success" ng-click="enableComponent($index,component.id)">Activar</button>
+	                </div>
+	  						</div>
   					  </td>
   					</tr>
           </table>
