--- a/web/elektron/views/statistics.html
+++ b/web/elektron/views/statistics.html
@@ -20,7 +20,13 @@
           <div class="spinner-container" ng-show="spinnerstatistics == true">
             <div class="loader-spinner"></div>
           </div>
-				  <table ng-show="spinnerstatistics == false" class="table table-bordered table-condensed">
+					<div ng-show="statisticserror == true" class="error-container">
+						<span>Error de conexion en el servidor </span>
+						<button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
+							<span class="glyphicon glyphicon-refresh"></span>
+						</button>
+					</div>
+				  <table ng-show="(spinnerstatistics == false) && (statisticserror == false)" class="table table-bordered table-condensed">
 					<tr style="font-weight: bold">
 						<td style="width:10%">Nombre</td>
 						<td style="width:3%">Estado</td>
@@ -116,7 +122,13 @@
                   <div class="spinner-container" ng-show="spinnerdoughnout == true">
                     <div class="loader-spinner"></div>
                   </div>
-                  <canvas ng-show="spinnerdoughnout == false" id="doughnut" height="150" class="chart chart-doughnut"
+									<div ng-show="statisticserror == true" class="error-container">
+										<span>Error de conexion en el servidor </span>
+										<button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
+											<span class="glyphicon glyphicon-refresh"></span>
+										</button>
+									</div>
+                  <canvas ng-show="(spinnerdoughnout == false) && (statisticserror == false)" id="doughnut" height="150" class="chart chart-doughnut"
                     chart-data="doughnutdata" chart-labels="doughnutlabels">
                   </canvas>
                   <div ng-show="spinnerdoughnout == false" style="margin-top:10px;">
@@ -129,8 +141,6 @@
 
                 </div>
             </div>
-            <div class="m-n panel-footer">
-            </div>
         </panel>
     </div>
     <div class="col-md-6">
@@ -139,11 +149,11 @@
             <panel-controls>
                 <panel-control-collapse></panel-control-collapse>
 
-                <button ng-show="loadingbar == true" class="button-spinner btn btn-sm btn-default">
+                <button ng-show="(loadingbar == true) && (barerror == false)" class="button-spinner btn btn-sm btn-default">
                   <div class="loader-spinner-small"></div>
                 </button>
 
-                <div class="btn-group" dropdown>
+                <div ng-show="barerror == false" class="btn-group" dropdown>
                   <button type="button" class="btn btn-sm btn-info">{{ currentPrecision.label || 'Cargando..'}}</button>
                   <button type="button" class="button-refresh btn btn-sm btn-info dropdown-toggle" dropdown-toggle>
                     <i class="caret"></i>
@@ -155,7 +165,7 @@
                   </ul>
                 </div>
 
-                <div class="btn-group" dropdown>
+                <div ng-show="barerror == false" class="btn-group" dropdown>
                   <button type="button" class="btn btn-sm btn-info">{{currentBarLeft.label || 'Cargando..'}}</button>
                   <button type="button" class="button-refresh btn btn-sm btn-info dropdown-toggle" dropdown-toggle>
                     <i class="caret"></i>
@@ -167,7 +177,7 @@
                   </ul>
                 </div>
 
-                <div class="btn-group" dropdown>
+                <div ng-show="barerror == false" class="btn-group" dropdown>
 
                   <button type="button" class="btn btn-sm btn-info">{{currentBarRigth.label || 'Cargando..' }}</button>
                   <button type="button" class="button-refresh btn btn-sm btn-info dropdown-toggle" dropdown-toggle>
@@ -186,16 +196,19 @@
                   <div class="spinner-container" ng-show="spinnerbar == true">
                     <div class="loader-spinner"></div>
                   </div>
-                  <canvas ng-show="spinnerbar == false" id="bar" class="chart chart-bar"
+									<div ng-show="barerror == true" class="error-container">
+										<span>Error de conexion en el servidor </span>
+										<button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
+											<span class="glyphicon glyphicon-refresh"></span>
+										</button>
+									</div>
+                  <canvas ng-show="(spinnerbar == false) && (barerror == false)" id="bar" class="chart chart-bar"
                     chart-data="bardata" chart-labels="barlabels" chart-series="barseries">
                   </canvas>
                 </div>
             </div>
-
-            <panel-footer ng-show="spinnerbar == false">
-
+            <panel-footer ng-show="(spinnerbar == false) && (barerror == false)">
               <div class="footer-bar">
-
                 <button ng-disabled="lastbutton" ng-disabled="previousPageDisable" ng-click="loadPage('last')" class="btn btn-sm btn-info">
                   Final
                 </button>
@@ -219,11 +232,8 @@
                 <button ng-disabled="indexbutton" ng-disabled="nextPageDisable" ng-click="loadPage(1)" class="btn btn-sm btn-info">
                   Inicio
                 </button>
-
               </div>
-
             </panel-footer>
-
         </panel>
 
     </div>
