WEB: cambios de feedback- manejo de errores y recarga de pagina, arreglos varios y mas

--- a/web/elektron/assets/css/styles.css
+++ b/web/elektron/assets/css/styles.css
@@ -126,6 +126,12 @@
   margin-top: 20%;
 }
 
+.task-error-container {
+  min-height: 160px;
+  text-align: center;
+  margin-top: 10%;
+}
+
 .error-button {
   background-color: transparent !important;
   border: none !important;
