--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -41,7 +41,13 @@
                     <div class="spinner-container" ng-show="spinner == true">
                       <div class="loader-spinner"></div>
                     </div>
-                    <canvas ng-show="spinner == false" id="line" class="chart chart-line" chart-data="line.data" chart-labels="line.labels"
+                    <div ng-show="historyerror == true" class="error-container">
+                      <span>Error de conexion en el servidor </span>
+                      <button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                      </button>
+                    </div>
+                    <canvas ng-show="(spinner == false) && (historyerror == false)" id="line" class="chart chart-line" chart-data="line.data" chart-labels="line.labels"
                       chart-series="line.series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
                     </canvas>
                   </div>
@@ -219,7 +225,7 @@
           </panel>
         </div>
 
-        <div class="history-footer-container">
+        <div ng-show="selectedperiod == false" class="history-footer-container">
           <span>Ingrese el período deseado para observar el consumo </span>
           <span class="glyphicon glyphicon-circle-arrow-up"></span>
         </div>
