--- a/web/elektron/views/layout/header.html
+++ b/web/elektron/views/layout/header.html
@@ -39,7 +39,7 @@
 		    <a href="#/login" style="font-size: 14px"><i class="fa fa-sign-in"></i> Log in</a>
 	  </li>
 	  <li class="dropdown" ng-show="isLoggedIn" dropdown>
-		    <a href class="dropdown-toggle username" dropdown-toggle><img src="../assets/img/nestor.png" alt="Userfoto" /></a>
+		    <a href class="dropdown-toggle username" dropdown-toggle><img src="../assets/img/iconoelektron.png" alt="Userfoto" /></a>
 		<ul class="dropdown-menu animated userinfo arrow">
 		  <li class="userlinks">
 			<ul class="dropdown-menu">
