--- a/web/elektron/views/components.html
+++ b/web/elektron/views/components.html
@@ -21,7 +21,13 @@
           <div class="spinner-container-components" ng-show="spinner == true">
             <div class="loader-spinner"></div>
           </div>
-				  <table ng-show="spinner == false" class="table table-bordered table-condensed">
+					<div ng-show="componentserror == true" class="error-container">
+						<span>Error de conexion en el servidor </span>
+						<button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
+							<span class="glyphicon glyphicon-refresh"></span>
+						</button>
+					</div>
+				  <table ng-show="(spinner == false) && (componentserror == false)" class="table table-bordered table-condensed">
   					<tr style="font-weight: bold">
   						<td style="width:20%">Nombre</td>
   						<td style="width:20%">IP</td>
@@ -34,8 +40,7 @@
 	  						<span editable-text="component.label" e-name="name" e-form="rowform" e-required>
 	  						  {{ component.label }}
 	  						</span>
-								<span ng-show="component.pluged == true" class="success float-right glyphicon glyphicon-link"></span>
-								<span ng-show="component.pluged == false" class="float-right glyphicon glyphicon-link"></span>
+								<span title="Componente enchufado" ng-show="component.pluged == true" class="text-success float-right glyphicon glyphicon-link"></span>
   					  </td>
   					  <td>
 	  						<span e-name="ip" e-form="rowform" e-required>
