--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -42,7 +42,7 @@
                       <div class="loader-spinner"></div>
                     </div>
                     <div ng-show="historyerror == true" class="error-container">
-                      <span>Error de conexion en el servidor </span>
+                      <span>{{errormessage}}</span>
                       <button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
                         <span class="glyphicon glyphicon-refresh"></span>
                       </button>
@@ -126,19 +126,32 @@
 
                         <table class="table table-bordered table-condensed">
                         <tr style="font-weight: bold">
-                          <td style="width:15%">Dispositivo</td>
-                          <td style="width:15%">Fecha desde</td>
-                          <td style="width:15%">Hora desde</td>
-                          <td style="width:15%">Fecha hasta</td>
-                          <td style="width:15%">Hora hasta</td>
-                          <td style="width:15%">Precision</td>
-                          <td style="width:10%">Acciones</td>
+                          <td style="width:18%">Dispositivo
+                            <span ng-show="selectedComponent.label != undefined" class="text-success float-right glyphicon glyphicon-ok"></span>
+                          </td>
+                          <td style="width:15%">Fecha desde
+                            <span ng-show="configuration.dateFrom != undefined" class="text-success float-right glyphicon glyphicon-ok"></span>
+                          </td>
+                          <td style="width:15%">Hora desde
+                            <span ng-show="configuration.timeFrom != undefined" class="text-success float-right glyphicon glyphicon-ok"></span>
+                          </td>
+                          <td style="width:15%">Fecha hasta
+                            <span ng-show="configuration.dateTo != undefined" class="text-success float-right glyphicon glyphicon-ok"></span>
+                          </td>
+                          <td style="width:15%">Hora hasta
+                            <span ng-show="configuration.timeTo != undefined" class="text-success float-right glyphicon glyphicon-ok"></span>
+                          </td>
+                          <td style="width:12%">Precision
+                            <span ng-show="selectedPrecision.label != undefined" class="text-success float-right glyphicon glyphicon-ok"></span>
+                          </td>
+                          <td style="width:10%">
+                          </td>
                         </tr>
                         <tr >
                           <td class="text-center">
                             <!-- Listado de dispositivos -->
                             <div class="btn-group" dropdown>
-                              <button type="button" class="btn btn-sm btn-basic">{{ selectedComponent.label || 'Cargando..' }}</button>
+                              <button type="button" class="btn btn-sm btn-basic">{{ selectedComponent.label || 'Elegir..' }}</button>
                               <button type="button" class="button-refresh btn btn-sm btn-basic dropdown-toggle" dropdown-toggle>
                                 <i class="caret"></i>
                               </button>
@@ -192,7 +205,7 @@
                           <td class="text-center">
                             <!-- Listado de precisiones -->
                             <div class="btn-group" dropdown>
-                              <button type="button" class="btn btn-sm btn-basic">{{ selectedPrecision.label }}</button>
+                              <button type="button" class="btn btn-sm btn-basic">{{ selectedPrecision.label || 'Elegir' }}</button>
                               <button type="button" class="button-refresh btn btn-sm btn-basic dropdown-toggle" dropdown-toggle>
                                 <i class="caret"></i>
                               </button>
