--- a/web/elektron/views/index.html
+++ b/web/elektron/views/index.html
@@ -47,7 +47,7 @@
                         </button>
                       </div>
                       <canvas ng-show="(spinner == false) && (dashboarderror == false)" id="line" class="chart chart-line" chart-data="line.data" chart-labels="line.labels"
-                        chart-series="line.series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
+                        chart-series="line.series" chart-options="options">
                       </canvas>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
               <div class="col-xs-6">
                 <a href="#/components" class="boxes-a boxes-success" >
                   <div class="boxes-title">
-                      <div class="text-center">Componentes conectados</div>
+                      <div class="text-center">Componentes conectados del total</div>
                   </div>
                   <div class="boxes-body">
                       <div class="text-center">{{ components_server_enabled.length || 0 }}/{{components_server.length || 0}} </div>
