Movil: spinners, monitor,  mas cosas. ME VUELVO LOCOOOOO

--- a/ionic-mobile/elektron/www/templates/component.html
+++ b/ionic-mobile/elektron/www/templates/component.html
@@ -9,7 +9,7 @@
         </ion-toggle>
       </div>
       <div class="item item-divider text-center">
-        <span>Ultimo consumo</span>
+        <span>Último consumo</span>
       </div>
       <div class="item item-text-wrap">
         <div ng-show="spinner == true" class="center-spinner">
