--- a/ionic-mobile/elektron/www/templates/tasks.html
+++ b/ionic-mobile/elektron/www/templates/tasks.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Tareas">
   <ion-content>
     <div class="item">
-      <div class="button-bar">
+      <div class="button-bar task-font">
         <a class="button button-positive" ng-show="porconsumo == true">Listar por consumo</a>
         <a class="button" ng-show="porconsumo == false" ng-click="changeToConsume()">Listar por consumo</a>
         <a class="button" ng-show="porconsumo == true" ng-click="changeToDate()">Listar por fecha y hora</a>
