--- a/web/elektron/views/monitor.html
+++ b/web/elektron/views/monitor.html
@@ -52,7 +52,7 @@
         <div class="col-md-12">
             <panel panel-class="panel-footer panel-default no-padding" heading="Ultimo dato medido">
                 <panel-controls>
-                    <span ng-show="current_data != undefined">Valor: <b>{{current_data.data_value}}</b> ({{ current_data_date | date:'HH:mm:ss' }} Hs) MAC Componente: <b>{{current_data.device_mac}}</b></span>
+                    <span ng-show="current_data != undefined">Valor: <b>{{current_data.data_value}}</b> ({{ current_data_date | date:'HH:mm:ss' }} Hs) - Componente: <b>{{current_data.device_label}}</b></span>
                 </panel-controls>
             </panel>
           </div>
