--- a/ionic-mobile/elektron/www/css/elektron.css
+++ b/ionic-mobile/elektron/www/css/elektron.css
@@ -135,6 +135,11 @@
   font-size: 0.9em;
 }
 
+.task-font a {
+  font-size: 0.85em;
+  border-width: 1px 1px 1px 1px !important;
+}
+
 .spinner-header svg {
   width: 20px;
   height: 20px;
