--- a/ionic-mobile/elektron/www/templates/monitor.html
+++ b/ionic-mobile/elektron/www/templates/monitor.html
@@ -4,12 +4,19 @@
       <div class="card">
         <div class="list">
               <div class="row item-divider item item-icon-right">
-                <div class="col col-50 title-components"><b>Monitor de componentes</b></div>
-                <i ng-if="websocketplay == true" ng-click="pauseWebsocket()" class="icon ion-pause positive icon-letter play-pause-icon"></i>
-                <i ng-if="websocketplay == false" ng-click="playWebsocket()" class="icon ion-play positive icon-letter play-pause-icon"></i>
+                <div class="col col-50 title-components">
+                  <b>Monitor de componentes</b>
+                </div>
+                <div class="col col-50">
+                  <i title="Conexion activada" ng-if="(websocketplay == true) && (spinnermonitor == false)" ng-click="pauseWebsocket()" class="icon ion-pause positive icon-letter play-pause-icon"></i>
+                  <i title="Conexion pausada" ng-if="(websocketplay == false) && (spinnermonitor == false)" ng-click="playWebsocket()" class="icon ion-play positive icon-letter play-pause-icon"></i>
 
-                <i ng-if="websocketStatus == true" ng-click="refreshConnection()" class="icon icon-letter ion-refresh balanced"></i>
-                <i ng-if="websocketStatus == false" ng-click="refreshConnection()" class="icon icon-letter ion-refresh assertive"></i>
+                  <i title="Conexión establecida: apretar para reiniciar" ng-if="(websocketStatus == true) && (spinnermonitor == false)" ng-click="refreshConnection()" class="icon icon-letter ion-refresh balanced"></i>
+                  <i title="Falla en la conexión: apretar para reiniciar" ng-if="(websocketStatus == false) && (spinnermonitor == false)" ng-click="refreshConnection()" class="icon icon-letter ion-refresh assertive"></i>
+
+                  <ion-spinner title="Cargando conexion en tiempo real" class="spinner-header spinner-dash spinner-balanced" ng-show="spinnermonitor == true" icon="spiral"></ion-spinner>
+
+                </div>
               </div>
         </div>
       </div>
