--- a/ionic-mobile/elektron/www/templates/components.html
+++ b/ionic-mobile/elektron/www/templates/components.html
@@ -7,11 +7,11 @@
       <div class="list">
           <div class="item item-button-right" ng-repeat="component in components_server">
             <span><b>{{component.label}}</b> <span class="mac-components">({{component.device_mac}})</span>
-              <span ng-if="component.devicestate.name == 'on'" class="badge-component badge badge-balanced">encendido</span>
-              <span ng-if="component.devicestate.name == 'off'" class="badge-component badge badge-assertive">apagado</span>
+              <span ng-if="component.devicestate.name == 'on'" class="badge-component badge badge-balanced"><i class="icon ion-power"></i></span>
+              <span ng-if="component.devicestate.name == 'off'" class="badge-component badge badge-assertive"><i class="icon ion-power"></i></span>
             </span>
             <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-positive">
-              <i class="icon ion-compose"></i>
+              <i class="icon ion-chevron-right"></i>
             </a>
           </div>
       </div>
